# TonalCreamAssistant

./: .gitignore  README.md
.github/workflows/: black.yml  build_images.yml  dart.yml  flake8.yml  isort.yml  pylint.yml  tag_and_push.yml
backend/: .env.example  README.md  docker-compose.yml
backend/db/: Dockerfile  db_schema.sql
backend/db/dumps/: dump  dump.txt
backend/deploy/: logstash.conf
backend/diagrams/: architecture.puml  product.uml
backend/docs/openapi/: cv_api.json
backend/etc/nginx/conf.d/: nginx.conf  site.conf
backend/services/admin_panel/: .gitignore  Dockerfile  pyproject.toml
backend/services/admin_panel/admin_panel/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/admin_panel/scripts/: django-entrypoint.sh
backend/services/cv/: Dockerfile  main.py  pyproject.toml
backend/services/cv/api/v1/cv/: __init__.py  tonal.py
backend/services/cv/api/v2/cv/: __init__.py  tonal.py
backend/services/cv/core/: loger.py  settings.py
backend/services/cv/schemas/: color_schema.py  error_schema.py  input_image_schema.py
backend/services/cv/scripts/: flask-entrypoint.sh  flask_health_check.sh
backend/services/cv/services/: convertors.py  cv_context.py  cv_processor.py  cv_tone_processor.py  face_extractor.py  tonal_cv.py  tone_extractor.py
backend/services/cv/services/chain/: cell.py  chain.py
backend/services/cv/services/haarcascade/: haarcascade_eye.xml
backend/services/cv/tests/: conftest.py  test_request.py
backend/services/cv/tests/test_data/: face_pixels.npy
backend/services/cv/tests/test_service/: test_convertors.py  test_cv_tone_processor.py  test_face_extractor.py  test_tone_extractor.py
backend/services/cv/utils/: photo_upload.py
cv_algs/source/: algs.py  utils.py  visualise.py
diagrams/: architecture.puml
diagrams/backend/: architecture.puml  vendor_db.uml
diagrams/deploy/: aws.puml
docs/backend/openapi/: cv_api.json  cv_api.md  vendor_api.json  vendor_api.md
frontend/: README.md
frontend/diagrams/: user_flow.fig
frontend/src/: analysis_options.yaml  flutter_native_splash.yaml  pubspec.yaml
frontend/src/android/app/: build.gradle
frontend/src/android/app/src/main/: AndroidManifest.xml
frontend/src/ios/Runner/: Info.plist
frontend/src/ios/Runner/Base.lproj/: LaunchScreen.storyboard
frontend/src/lib/: local_main.dart  main.dart  prod_main.dart
frontend/src/lib/models/: color.dart  color.g.dart  product.dart  product.g.dart
frontend/src/lib/pages/home/: home_page.dart
frontend/src/lib/pages/home/bottom_sheets/: base_bottom_sheet.dart  get_recomendations.dart  home_bottom_sheet.dart  loading_bottom_sheet.dart  recommendation_bottom_sheet.dart
frontend/src/lib/utils/: check_wrap.dart
frontend/src/test/: widget_test.dart
frontend/src/web/: index.html  manifest.json
frontend/src/web/splash/: style.css
infrastructure/: README.md  deploy.sh  main.tf  terraform.tf  variables.tf  vpc.tf
infrastructure/modules/container_definition_generator/: README.md  versions.tf
infrastructure/modules/tnlinc/: ecs.tf  iam.tf  lb.tf  sg.tf  task_definition.tf  task_definition_admin_panel.tf  task_definition_cv.tf  task_definition_db.tf  task_definition_nginx.tf  task_definition_vendor.tf  variables.tf
infrastructure/nginx/: Dockerfile  nginx.conf
infrastructure/nginx/conf.d/: nginx.conf
infrastructure/nginx/static/: readme.txt
(+7 files in other folders)
